# Computex

./: .env.example  .gitignore  Cargo.toml  DOCUMENTATION_INDEX.md  Dockerfile  GETTING_STARTED.md  LICENSE  PROJECT_SUMMARY.md  README.md  docker-compose.yml
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  QUANTUM_CRYPTOGRAPHY.md  SECURITY.md
src/: config.rs  error.rs  main.rs
src/api/: handlers.rs  routes.rs
src/crypto/: encryption.rs  mod.rs  quantum_safe.rs
src/models/: compute.rs  marketplace.rs  mod.rs  order.rs  provider.rs  user.rs
src/services/: marketplace.rs  matching.rs  mod.rs  pricing.rs  provider_adapter.rs  security.rs
