[package]
name = "computex"
version = "0.1.0"
edition = "2021"
authors = ["Apex Research"]
description = "Decentralized Compute Marketplace - Free Market Exchange with Quantum-Safe Cryptography"
license = "MIT"

[dependencies]
# Web Framework & Async
axum = "0.7"
tokio = { version = "1", features = ["full"] }
hyper = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres"] }
uuid = { version = "1", features = ["v4", "serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Security & Cryptography
sha2 = "0.10"
hmac = "0.12"
argon2 = "0.5"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }

# Post-Quantum Cryptography (ML-KEM, ML-DSA)
liboqs-rs = "0.9"  # Open Quantum Safe library

# Encryption
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
x25519-dalek = "2.0"

# 2FA & OTP
totp-lite = "2.0"
qrcode = "0.13"
base64 = "0.21"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Decimal for precise calculations
rust_decimal = { version = "1.33", features = ["serde"] }
rust_decimal_macros = "1.33"

# Configuration
config = "0.13"

# Async Utilities
futures = "0.3"
parking_lot = "0.12"

# Testing
[dev-dependencies]
mockito = "1.2"
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
